@@ -1,0 +1,21 @@
+{
+    "in_latency_window": [],
+    "operation": "read",
+    "read_preference": {
+        "mode": "Primary",
+        "tag_sets": [
+            {}
+        ]
+    },
+    "suitable_servers": [],
+    "topology_description": {
+        "servers": [
+            {
+                "address": "b:27017",
+                "avg_rtt_ms": 5,
+                "type": "PossiblePrimary"
+            }
+        ],
+        "type": "ReplicaSetNoPrimary"
+    }
+}
