@@ -37,6 +37,7 @@ New features and bug fixes:
   * Added support for the new readConcernLevel "linearizable".
   * New CMake option ENABLE_TRACING allows debug output, which before had only
     been available with "configure --enable-tracing".
+  * Bugfix: "PossiblePrimary"-type replicas could be selected for reads
 
 Removed configure flags:
   * --enable-experimental has been removed and all of its features
